add new table i had to fix typos

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 development:
   adapter: postgresql
-  database: shoe_store
+  database: shoestore
 test:
   adapter: postgresql
-  database: shoe_store_test
+  database: shoestore_test
